# ribo-switch-design

./: .gitignore  README.md  build_rust.sh  implementation_plan.md  pyproject.toml  results.json  verify_rust.py
.claude/: settings.local.json
data/known_riboswitches/: README.md
ribo_rs/: Cargo.toml  __init__.py  pyproject.toml
ribo_rs/src/: energy.rs  eval_combined.rs  fold.rs  lib.rs  params.rs
ribo_switch/: __init__.py  bicompat.py  brpf.py  energy.py  fold.py  genetics.py  graph.py  io_utils.py  main.py  nsga2.py  optimizer.py  partition.py  rust_bridge.py  scorer.py  structure.py  topology.py  turner.py  types.py  verify.py  viz.py
scripts/: bench_nsga2.py  run_rand42.py
tests/: conftest.py  test_genetics.py  test_graph.py  test_known_riboswitches.py  test_nsga2.py  test_smoke.py  test_structure.py
